--- a/less/blocks/animation.less
+++ b/less/blocks/animation.less
@@ -28,14 +28,26 @@
 }
 
 
-@keyframes zoomIn {
+@keyframes open {
   from {
+    visibility: hidden;
     opacity: 0;
-    transform: scale3d(.3, .3, .3);
   }
 
   50% {
     opacity: 1;
+  }
+}
+
+@keyframes close {
+  from {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0;
+    visibility: hidden;
+    display: none
   }
 }
 
