--- a/less/blocks/pagination.less
+++ b/less/blocks/pagination.less
@@ -15,11 +15,11 @@
 }
 
 .pagination__numbers {
-  display: flex;
+  /* display: flex;
   justify-content: space-between;
-  font-size: 19px;
+  font-size: 19px; */
 
-  a {
+  /* a {
     position: relative;
     color: @title-color;
 
@@ -33,7 +33,7 @@
       font-weight: 900;
       text-decoration: underline;
     }
-  }
+  } */
 
   @media screen and @desktop-width {
     padding: 0 115px;
@@ -54,6 +54,10 @@
 
   @media screen and @desktop-width {
     transform: translateY(13px);
+  }
+
+  &:last-child {
+    display: none;
   }
 }
 
