--- a/less/blocks/social-links.less
+++ b/less/blocks/social-links.less
@@ -26,7 +26,7 @@
 .follow-us .social-links {
   position: absolute;
   width: 170px;
-  animation: fadeInDown 1s both;
+  animation: open 2s both;
 
   @media screen and (min-width: 980px) {
     top: 3px;
@@ -41,7 +41,6 @@
 
 .follow-us .social-links--close {
   display: none;
-  // animation: fadeInDown 1s both;
 }
 
 .main-nav__item--social .social-links {
