--- a/less/style.less
+++ b/less/style.less
@@ -23,5 +23,15 @@
 @import "blocks/follow-us.less";
 @import "blocks/social-links.less";
 
-
 @import "blocks/animation.less";
+
+@import "swiper/core.less";
+@import "swiper/effects.less";
+@import "swiper/mixins.less";
+@import "swiper/navigation.less";
+@import "swiper/navigation-f7.less";
+@import "swiper/preloader.less";
+@import "swiper/preloader-f7.less";
+@import "swiper/scrollbar.less";
+@import "swiper/swiper.less";
+@import "swiper/zoom.less";
