--- a/less/blocks/main-slider.less
+++ b/less/blocks/main-slider.less
@@ -12,28 +12,22 @@
   }
 }
 
-.main-slider__slides {
-  width: auto;
-  min-height: 280px;
-  overflow: hidden;
-  display: flex;
+/* .main-slider__slides {
   justify-content: space-between;
   align-items: flex-start;
-}
+} */
 
 .main-slider__slide {
-  min-width: 250px;
-  width: 50%;
-  margin-right: 20px;
+  width: 250px;
 
   &:last-child {
     margin-right: 0;
   }
 
   @media screen and @tablet-width {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-between; */
     padding-bottom: 40px;
 
     &:nth-child(even) {
@@ -47,11 +41,21 @@
   }
 }
 
+.main-slider__slide-text-wrapper.background--light {
+  color: black;
+}
+
+.main-slider__slide-text-wrapper.background--dark {
+  color: white;
+}
+
 .main-slider__slide-img {
   display: block;
   width: 100%;
   height: auto;
   margin-bottom: 25px;
+
+  outline: 1px solid black;
 
   @media screen and @desktop-width {
     margin-bottom: 30px;
