--- a/less/blocks/follow-us.less
+++ b/less/blocks/follow-us.less
@@ -51,13 +51,16 @@
   height: 16px;
 
   &--close {
-    fill: @title-color;
-    transform: rotate(45deg);
+    // fill: @title-color;
+    // transform: rotate(45deg);
+    // background: url(../img/close.png) no-repeat 50% 50%;
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA4AAAAOCAYAAAAfSC3RAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAABkSURBVHgBnZLRDcAgCEQZgRE6AoH9Z+gIHaX1mjbxAxWPxA/xPUP0RFqZmbZ1yKLAgP03GhGnu18zGWdgwL5y17hH8pCZycuLM6AyTSqXpEwuS7RIjUo9DvUddADoyH1N3Q35A8AjgEmBhtoTAAAAAElFTkSuQmCC) no-repeat 50% 50%;
   }
 
   &--open {
-    fill: @pink;
-    transform: rotate(0);
+    // fill: @pink;
+    // background: url(../img/plus.png) no-repeat 50% 50%;
+    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAySURBVHgB7c8xCgAACAJAf9n/5x5RNLQ2JESDgpscCAxxs6hiGwFXQI+25QH6goAHQAIsjJuhMQpWUQAAAABJRU5ErkJggg==) no-repeat 50% 50%;
   }
 }
 
