--- a/less/blocks/main-toggler.less
+++ b/less/blocks/main-toggler.less
@@ -44,3 +44,12 @@
     text-decoration: underline;
   }
 }
+
+/* .main-toggler__toggle.background--light {
+  color: @title-color;
+}
+
+.main-toggler__toggle.background--dark {
+  color: red;
+} */
+
