--- a/less/global/scaffolding.less
+++ b/less/global/scaffolding.less
@@ -140,3 +140,21 @@ img {
 .is_stuck {
   z-index: 20;
 }
+
+/* .swiper-pagination-bullet {
+
+  &::after {
+    position: absolute;
+    top: 13px;
+    left: 35px;
+    content: "";
+    display: block;
+    width:  20px;
+    height: 2px;
+    background-color: @title-color;
+
+  }
+    &:last-child::after {
+      display: none;
+    }
+} */
