Сделал слайдер в меню. Конфликт в скриптах не решен

--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -120,7 +120,7 @@
   width: 100%;
   min-height: 550px;
   // height: 100vh;
-  padding-bottom: 40px;
+  padding-bottom: 35px;
   text-align: center;
   background-color: @white;
 
@@ -139,6 +139,7 @@
     @media screen and @desktop-width {
       display: block;
       margin-top: 100px;
+      .container-desktop();
     }
   }
 }
@@ -159,6 +160,11 @@
     &:hover {
       color: @pink;
     }
+  }
+
+  &--social {
+      margin-bottom: 0;
+      margin-top: 62px;
   }
 
   @media screen and @desktop-width {
@@ -183,6 +189,11 @@
   align-items: flex-start;
   padding: 20px;
   padding-bottom: 45px;
+
+  @media screen and @desktop-width {
+    padding-bottom: 95px;
+  }
+
 }
 
 .main-nav__logo-menu {
@@ -242,24 +253,29 @@
   margin-bottom: 135px;
 }
 
-.main-nav__slides {
+/* .main-nav__slides {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+} */
+
+.main-nav__slide {
+  width: 296px;
 }
 
 .main-nav__slide-link {
   display: block;
-  max-width: 296px;
-  max-height: 186px;
-  overflow: hidden;
+  // overflow: hidden;
 
   img {
-    transition: all 0.8s ease-in-out;
+    display: block;
+    width: 100%;
+    height: auto;
+    // transition: all 0.8s ease-in-out;
 
-    &:hover {
+    /* &:hover {
       transform: scale(1.1);
       filter: saturate(200%);
-    }
+    } */
   }
 }
