--- a/less/swiper/core.less
+++ b/less/swiper/core.less
@@ -1,4 +1,6 @@
-.swiper-container {
+.swiper-container,
+.swiper-container-main,
+.swiper-container-nav {
   width: auto;
   margin-left: auto;
   margin-right: auto;
@@ -8,30 +10,6 @@
   z-index: 1;
 
   outline: 1px dashed red;
-
-  /* @media (min-width: 767px) {
-    padding-left: 20px;
-    padding-right: 20px;
-    // background-color: green;
-  } */
-}
-
-.swiper-container-main {
-  width: auto;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-  overflow: hidden;
-  /* Fix of Webkit flickering */
-  z-index: 1;
-
-  outline: 1px dashed red;
-
-  /* @media (min-width: 767px) {
-    padding-left: 20px;
-    padding-right: 20px;
-    // background-color: green;
-  } */
 }
 
 .swiper-container-no-flexbox {
