--- a/less/swiper/navigation.less
+++ b/less/swiper/navigation.less
@@ -77,6 +77,25 @@
     }
 }
 
+.swiper-pagination-nav {
+    // position: absolute;
+    // text-align: center;
+    display: flex;
+    justify-content: space-between;
+    -webkit-transition: 300ms;
+    -moz-transition: 300ms;
+    -o-transition: 300ms;
+    transition: 300ms;
+    -webkit-transform: translate3d(0,0,0);
+    -ms-transform: translate3d(0,0,0);
+    -o-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+    z-index: 10;
+    &.swiper-pagination-hidden {
+        opacity: 0;
+    }
+}
+
 /* Common Styles */
 .swiper-pagination-fraction, .swiper-pagination-custom, .swiper-container-horizontal > .swiper-pagination-bullets{
     bottom: 10px;
