--- a/less/blocks/follow-us.less
+++ b/less/blocks/follow-us.less
@@ -35,6 +35,11 @@
   color:  @title-color;
   fill: @pink;
   cursor: pointer;
+  text-shadow:
+      -1px -1px 0 #fff,
+       1px -1px 0 #fff,
+      -1px  1px 0 #fff,
+       1px  1px 0 #fff;
 
   &:hover {
     // text-decoration: underline;
