--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -27,11 +27,19 @@
   &:hover {
     fill: @pink;
   }
+
+  &--dark {
+    fill: @title-color;
+  }
 }
 
 .main-nav__burger-icon-open {
   // position: absolute;
   cursor: pointer;
+
+  &:hover {
+    fill: @pink!important;
+  }
 
   &--hidden {
     display: none;
@@ -39,6 +47,19 @@
 
   &--visible {
     display: block;
+  }
+
+  &--dark {
+    fill: @title-color;
+  }
+
+  &--scrolled {
+    fill: @title-color;
+    background-color: @white;
+
+    &:hover {
+      fill: @pink;
+    }
   }
 }
 
@@ -265,17 +286,17 @@
 
 .main-nav__slide-link {
   display: block;
-  // overflow: hidden;
+  overflow: hidden;
 
   img {
     display: block;
     width: 100%;
     height: auto;
-    // transition: all 0.8s ease-in-out;
+    transition: all 0.5s ease;
 
-    /* &:hover {
+     &:hover {
       transform: scale(1.1);
-      filter: saturate(200%);
-    } */
+      filter: saturate(150%);
+    }
   }
 }
