--- a/less/blocks/last-news.less
+++ b/less/blocks/last-news.less
@@ -57,16 +57,6 @@
     margin-right: 0;
   }
 
-  img {
-    width: 100%;
-    height: auto;
-    margin-bottom: 15px;
-
-    @media screen and @desktop-width {
-      margin-bottom: 20px;
-    }
-  }
-
   p {
     font-size: 14px;
 
@@ -81,6 +71,27 @@
 
   @media screen and @tablet-width {
     min-width: 229px;
+  }
+}
+
+.last-news__img-container {
+  margin-bottom: 15px;
+  overflow: hidden;
+
+  @media screen and @desktop-width {
+    margin-bottom: 20px;
+  }
+
+  img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    transition: all 0.5s ease;
+
+    &:hover {
+      transform: scale(1.1);
+      filter: saturate(150%);
+    }
   }
 }
 
