--- a/less/swiper/core.less
+++ b/less/swiper/core.less
@@ -9,7 +9,7 @@
   /* Fix of Webkit flickering */
   z-index: 1;
 
-  outline: 1px dashed red;
+  // outline: 1px dashed red;
 }
 
 .swiper-container-no-flexbox {
@@ -77,7 +77,7 @@
   height: auto;
   position: relative;
 
-  outline: 1px solid blue;
+  // outline: 1px solid blue;
 }
 
 /* Auto Height */
