--- a/less/style.less
+++ b/less/style.less
@@ -6,6 +6,7 @@
 @import "global/scaffolding.less";
 @import "global/container.less";
 
+@import "blocks/main.less";
 @import "blocks/page-header.less";
 @import "blocks/page-footer.less";
 @import "blocks/main-logo.less";
@@ -22,6 +23,9 @@
 @import "blocks/main-toggler.less";
 @import "blocks/follow-us.less";
 @import "blocks/social-links.less";
+@import "blocks/guards-content.less";
+@import "blocks/guards-gallery.less";
+@import "blocks/map.less";
 
 @import "blocks/animation.less";
 
