--- a/less/swiper/core.less
+++ b/less/swiper/core.less
@@ -1,6 +1,7 @@
 .swiper-container,
 .swiper-container-main,
-.swiper-container-nav {
+.swiper-container-nav,
+.swiper-container--galery {
   width: auto;
   margin-left: auto;
   margin-right: auto;
