--- a/less/global/scaffolding.less
+++ b/less/global/scaffolding.less
@@ -43,6 +43,12 @@ img {
   height: auto;
 }
 
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .visually-hidden {
   position: absolute;
   overflow: hidden;
