--- a/less/blocks/guards-content.less
+++ b/less/blocks/guards-content.less
@@ -22,7 +22,7 @@
     float: right;
     width: 505px;
     height: 339px;
-    margin-top: 10px;
+    margin-top: 155px;
   }
 }
 
@@ -52,6 +52,7 @@
     color: @title-color;
 
     @media screen and @desktop-width {
+      margin-bottom: 105px;
       font-size: 42px;
       transform: translateX(-20px);
     }
