--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -57,6 +57,7 @@
     @media screen and @desktop-width {
       padding-bottom: 95px;
       background-image: url(../img/guards-hero-bartosh-desktop@1x.jpg);
+      background-position: 0 100%;
     }
   }
 }
