--- a/less/blocks/guards-gallery.less
+++ b/less/blocks/guards-gallery.less
@@ -1,6 +1,6 @@
 .guards-gallery {
   margin-top: 25px;
-  outline:  1px solid black;
+  // outline:  1px solid black;
 
   @media screen and @desktop-width {
     width: 100%;
@@ -11,18 +11,22 @@
 .guards-gallery__container {
   margin-bottom: 50px;
 
-  outline:  1px solid red;
+  // outline:  1px solid red;
 }
 
 .guards-gallery__slide {
   width: 275px;
   height: auto;
 
-  outline:  1px solid blue;
+  // outline:  1px solid blue;
+
+  @media screen and @tablet-width {
+    transition: all 0.5s ease;
+  }
 
   @media screen and @desktop-width {
     width: 610px;
-    transition: all 0.7s ease;
+    transition: all 0.5s ease;
   }
 }
 
@@ -34,11 +38,11 @@
     display: block;
     width: 100%;
     height: 100%;
-    // transition: all 0.5s ease;
+    transition: all 0.5s ease;
 
     &:hover {
-      // transform: scale(1.1);
-      // filter: saturate(150%);
+      transform: scale(1.1);
+      filter: saturate(150%);
     }
   }
 }
