--- a/less/blocks/main-block.less
+++ b/less/blocks/main-block.less
@@ -17,7 +17,7 @@
   height: 2px;
   transform: translateY(12px);
   background:
-    linear-gradient(to bottom, @pink, @pink),
+    linear-gradient(to bottom, #FFF9F3, #FFF9F3),
     linear-gradient(to bottom, @title-color, @title-color);
   background-position:
               right top, right top;
