--- a/less/blocks/main-slider.less
+++ b/less/blocks/main-slider.less
@@ -26,6 +26,10 @@
     margin-right: 0;
   }
 
+  @media (max-width: 768px) {
+    transform: none!important;
+  }
+
   @media screen and @tablet-width {
     padding-bottom: 40px;
   }
