--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -44,10 +44,16 @@
     border: none;
   }
 
+  @media screen and @tablet-width {
+    width: 74%;
+    height: 340px;
+    margin: 0 auto;
+    transform: translateX(30px);
+  }
+
   @media screen and @desktop-width {
     width: 925px;
     height: 580px;
-    margin: 0 auto;
     transform: translateX(50px);
   }
 }
