--- a/less/blocks/social-links.less
+++ b/less/blocks/social-links.less
@@ -30,12 +30,12 @@
 
   @media screen and (min-width: 980px) {
     top: 3px;
-    left: 190px;
+    left: 135px;
   }
 
   @media screen and @desktop-width {
     top: 3px;
-    left: 190px;
+    // left: 140px;
   }
 }
 
