--- a/less/global/scaffolding.less
+++ b/less/global/scaffolding.less
@@ -63,7 +63,7 @@ img {
 .gradient-bg {
   position: relative;
   min-width: 320px;
-  background: linear-gradient(to bottom, #4F4F4F, #898785);
+  background: linear-gradient(to bottom, #797776, #898785);
   background-position: right top;
   background-size: 21.875% 100%;
   background-repeat: no-repeat;
@@ -149,4 +149,8 @@ img {
 // Класс jQuery для Sticky-элемент
 .is_stuck {
   z-index: 20;
+}
+
+input:focus {
+  outline: none;
 }
