--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -1,7 +1,7 @@
 .page-footer {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-image: linear-gradient(to bottom, #4F4F4F, #757372);
+  background-image: linear-gradient(to bottom, #797776, #898785);
 
   @media screen and @tablet-width {
     padding-top: 65px;
