--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -12,71 +12,132 @@
 }
 
 .page-header__block {
-  padding-top: 20px;
+  width: auto;
+  min-height: 200px;
+  background-color: lightgray;
+  overflow: hidden;
+  /* padding-top: 20px;
   padding-bottom: 50px;
   margin-bottom: 65px;
 
   background-image: url(../img/header.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: 39.6% 100%;
+  background-position: 39.6% 100%; */
 
   @media screen and @tablet-width {
-    height: 390px;
+    // height: 390px;
     margin: 0 20px;
-    padding-bottom: 30px;
+    // padding-bottom: 30px;
   }
 
   @media screen and @desktop-width {
-    height: 665px;
-  }
-
-  p {
-    padding-right: 45px;
-    font-size: 25px;
-    font-weight: 900;
-    text-transform: uppercase;
-    color:  @white;
-
-    @media screen and @tablet-width {
-      padding: 0 6.5%;
-      font-size: 28px;
-    }
-
-    @media screen and @desktop-width {
-      font-size: 50px;
-    }
+    // height: 665px;
   }
 
   &--keepers {
     margin-bottom: 60px;
     min-height: 499px;
     background-image: url(../img/guards-hero-bartosh-mobile@1x.jpg);
-    background-position: 40% 100%;
+    background-position: 40% center;
 
     @media screen and @desktop-width {
       padding-bottom: 95px;
       background-image: url(../img/guards-hero-bartosh-desktop@1x.jpg);
-      background-position: 0 100%;
+      background-position: 0 center;
     }
   }
 }
 
-.page-header__title {
-  margin-bottom: 190px;
+.page-header__img-wrapper {
+  position: relative;
+  min-height: 200px;
+
+  &::after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(15deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.4) 40%, rgba(0, 0, 0, 0.1) 60%, transparent);
+  }
+}
+
+.page-header__img {
+  display: block;
+  width: 100%;
+  height: 500px;
+  // width: auto;
+  object-fit: cover;
 
   @media screen and @tablet-width {
-    margin-bottom: 120px;
-    transform: translate(-10px, -10px);
+    // height: 400px;
+    height: auto;
   }
 
   @media screen and @desktop-width {
-    margin-bottom: 255px;
+    // height: 665px;
+    height: auto;
+  }
+}
+
+.page-header__text-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.page-header__title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  // margin-bottom: 190px;
+
+  a {
+    // display: block;
+  }
+
+  img {
+    display: block;
+    width: 135px;
+  }
+
+  @media screen and @tablet-width {
+    // margin-bottom: 120px;
+    // transform: translate(-10px, -10px);
+  }
+
+  @media screen and @desktop-width {
+    // margin-bottom: 255px;
 
     img {
       width: 75px;
       height: 126px;
     }
+  }
+}
+
+.page-header__intro {
+  position: absolute;
+  left: 0;
+  bottom: 25px;
+  padding-left: 20px;
+  padding-right: 25px;
+  font-size: 22px;
+  line-height: 1.6;
+  font-weight: 900;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color:  @white;
+
+  @media screen and @tablet-width {
+    padding: 0 6.5%;
+    font-size: 28px;
+  }
+
+  @media screen and @desktop-width {
+    font-size: 50px;
   }
 }
 
