--- a/less/blocks/partners.less
+++ b/less/blocks/partners.less
@@ -1,13 +1,12 @@
 .partners {
   width: 100%;
   padding-top: 40px;
-  margin-bottom: 65px;
+  padding-bottom: 65px;
   border-top: 2px solid @title-color;
 
   @media screen and @desktop-width {
     border-top: none;
     .container-desktop();
-    margin-bottom: 0;
     padding-bottom: 100px;
   }
 }
@@ -16,7 +15,7 @@
   position: relative;
   z-index: 5;
   margin-top: -53px;
-  margin-bottom: 35px;
+  margin-bottom: 55px;
   padding-left: 20px;
   font-size: 20px;
   font-weight: 900;
@@ -67,13 +66,6 @@
   align-items: center;
   margin: auto;
 
-  img {
-    @media screen and @desktop-width {
-      width: 400px;
-      height: 210px;
-    }
-  }
-
   @media screen and @tablet-width {
     flex-direction: row;
     justify-content: center;
@@ -82,11 +74,64 @@
 }
 
 .partners__link {
-  margin-bottom: 5px;
+  margin-bottom: 50px;
   flex-shrink: 0;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 
   @media screen and @tablet-width {
     margin-left: 9.1%;
     margin-right: 9.1%;
+    margin-bottom: 0;
+  }
+
+  img {
+    display: block;
+    filter: grayscale(100%);
+
+    &:hover {
+      filter: none;
+    }
+  }
+}
+
+.partners__img-skoda {
+
+  @media screen and @tablet-width {
+    width: 172px;
+    height: 47px;
+  }
+
+  @media screen and @desktop-width {
+    width: 251px;
+    height: 74px;
+  }
+}
+
+.partners__img-okko {
+
+  @media screen and @tablet-width {
+    width: 117px;
+    height: 31px;
+  }
+
+  @media screen and @desktop-width {
+    width: 171px;
+    height: 51px;
+  }
+}
+
+.partners__img-kievstar {
+
+  @media screen and @tablet-width {
+    width: 144px;
+    height: 45px;
+  }
+
+  @media screen and @desktop-width {
+    width: 208px;
+    height: 65px;
   }
 }
