--- a/less/variables.less
+++ b/less/variables.less
@@ -2,7 +2,8 @@
 
 @black: #000;
 @white: #fff;
-@pink : #eb5757;
+// @pink : #eb5757;
+@pink : #0DB5DA;
 @title-color: #333;
 @text-color: #4F4F4F;
 
