--- a/less/blocks/social-links.less
+++ b/less/blocks/social-links.less
@@ -43,7 +43,7 @@
   display: none;
 }
 
-.main-nav__item--social .social-links {
+/* .main-nav__item--social .social-links {
 
   @media screen and @desktop-width {
     position: absolute;
@@ -51,4 +51,4 @@
     top: -695px;
     left: -1165px;
   }
-}
+} */
