--- a/less/blocks/subscription.less
+++ b/less/blocks/subscription.less
@@ -9,24 +9,11 @@
 
   @media screen and @desktop-width {
     padding: 0 9.7656%;
-    margin-bottom: 105px;
+    margin-bottom: 80px;
   }
 }
 
 .subscription__inner {
-
-  /* img {
-    display: none;
-
-    @media screen and @tablet-width {
-      display: block;
-    }
-
-    @media screen and @desktop-width {
-      width: 110px;
-      height: 184.68px;
-    }
-  } */
 
   @media screen and @tablet-width {
     display: flex;
@@ -42,15 +29,66 @@
   a {
     @media screen and @tablet-width {
       display: block;
-      margin-bottom: 15px;
+      margin-bottom: 30px;
+    }
+
+    @media screen and @desktop-width {
+      margin-bottom: 50px;
     }
   }
 
   @media screen and @tablet-width {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    // margin-right: 10%;
+    align-items: center;
+    margin-right: 9.1%;
+  }
+}
+
+.subscription__logo-guards {
+
+  img {
+
+    @media screen and @tablet-width {
+      width: 96px;
+    }
+
+    @media screen and @desktop-width {
+      width: 191px;
+    }
+  }
+}
+
+.subscription__logo-findin {
+
+  img {
+
+    @media screen and @tablet-width {
+      width: 92px;
+      height: 21px;
+    }
+
+    @media screen and @desktop-width {
+      width: 186px;
+      height: 44px;
+    }
+  }
+}
+
+.subscription__logo-umh-group {
+  margin-bottom: 0!important;
+
+  img {
+
+    @media screen and @tablet-width {
+      width: 78px;
+      height: 22px;
+    }
+
+    @media screen and @desktop-width {
+      width: 144px;
+      height: 41px;
+    }
   }
 }
 
@@ -100,8 +138,10 @@
   @media screen and @tablet-width {
     width: 76%;
     margin-right: auto;
+  }
 
-    // outline: 1px solid @white;
+  @media screen and @desktop-width {
+    width: 71%;
   }
 }
 
@@ -155,7 +195,7 @@
 .subscription__submit {
   position: relative;
   padding: 5px 0;
-  margin-bottom: 45px;
+  margin-bottom: 25px;
   font-size: 18px;
   font-weight: 700;
   color: @white;
