--- a/less/blocks/copyrights.less
+++ b/less/blocks/copyrights.less
@@ -1,18 +1,47 @@
 .copyrights {
 
-  @media (min-width: 500px) {
+  /* @media (min-width: 500px) {
     padding: 0 9.7656%;
-  }
+  } */
 }
 
 .copyrights__logo-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
-  margin-bottom: 50px;
+  margin-bottom: 25px;
+
+  .subscription__logo-guards {
+    margin-bottom: 25px;
+
+    img {
+      width: 100px;
+      height: 40px;
+    }
+  }
+
+  .subscription__logo-findin {
+    margin-bottom: 25px;
+
+    img {
+      width: 76px;
+      height: 18px;
+    }
+  }
+
+  .subscription__logo-umh-group {
+
+    img {
+      width: 65px;
+      height: 18px;
+      // filter: grayscale(100%);
+    }
+  }
 
   @media screen and @tablet-width {
-    img {
       display: none;
-    }
   }
 }
 
@@ -25,6 +54,8 @@
 }
 
 .copyrights__text {
+  padding-top: 10px;
+  border-top: 1px solid #9B9B9B;
 
   img {
     width: 55px;
@@ -41,6 +72,16 @@
       margin-left: 10px;
     }
   }
+
+  @media screen and @tablet-width {
+    padding: 0 5.5%;
+    padding-top: 30px;
+  }
+
+  @media screen and @desktop-width {
+    padding: 0 9.7656%;
+    padding-top: 30px;
+  }
 }
 
 .copyrights__findin {
@@ -51,7 +92,13 @@
   color: @white;
 
   @media screen and @tablet-width {
+    display: inline-block;
+    vertical-align: bottom;
     font-size: 14px;
+  }
+
+  @media screen and @desktop-width {
+    margin-right: 30px;
   }
 }
 
@@ -62,9 +109,10 @@
   text-align: center;
 
   @media screen and @tablet-width {
+    display: inline-block;
+    vertical-align: bottom;
     width: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    //justify-content: center;
+    //align-items: center;
   }
 }
