--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -11,6 +11,11 @@
   padding-top: 20px;
 
   // outline: 1px solid gray;
+
+  @media @desktop-width {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 .main-nav__sponsor {
@@ -140,7 +145,9 @@
   padding-top: 5px;
 
   @media screen and @tablet-width {
+    display: flex;
     margin-left: 10px;
+    padding-top: 0;
   }
 }
 
@@ -179,9 +186,9 @@
     transform: rotate(-60deg);
 
     @media screen and @tablet-width {
-      // top: 11px;
-      // left: 36px;
-      // width: 20px;
+      top: 10px;
+      left: 37px;
+      width: 20px;
     }
   }
 
@@ -198,8 +205,8 @@
   top: 0;
   left: 0;
   width: 100%;
-  min-height: 550px;
-  // height: 100vh;
+  height: 100vh;
+  min-height: 500px;
   padding-bottom: 35px;
   text-align: center;
   background-color: @white;
@@ -212,12 +219,34 @@
     animation: fadeInDown 0.6s both;
 
     // outline: 1px solid gray;
+    overflow: auto;
+
+    @media screen and (max-width: 750px) and (orientation: landscape) {
+      padding-bottom: 200px;
+    }
 
     @media screen and @tablet-width {
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
+      padding-top: 20px;
+      padding-left: 20px;
+      padding-right: 20px;
     }
+
+    @media screen and @desktop-width {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+  }
+
+  @media screen and @desktop-width {
+    padding-right: 20px;
+    padding-left: 20px;
+
+    // outline: 1px solid black;
   }
 
   /* .main-nav__lang-switcher {
@@ -242,6 +271,14 @@
       color: @pink;
     }
 
+    &:active {
+      opacity: 0.5;
+    }
+
+    &.active {
+      color: @pink;
+    }
+
     @media screen and @tablet-width {
       font-size: 20px;
     }
@@ -250,77 +287,97 @@
   &--social {
     margin-bottom: 0;
     margin-top: 60px;
-  }
 
-  @media screen and @tablet-width {
-
-    &--social {
+    @media screen and @tablet-width {
       order: -1;
-      margin-top: 20px;
-      margin-left: 20px;
-      margin-right: auto;
-      margin-bottom: 90px;
+      align-self: flex-start;
+      margin-top: 0;
+      transform: translateY(-49px);
+    }
+
+    @media screen and @desktop-width {
+      order: -2;
+      transform: translateY(0);
+      position: absolute;
+      top: 20px;
+      left: 50%;
+      margin-left: -630px;
     }
   }
 
-  @media screen and @desktop-width {
-    // position: relative;
-    // display: inline-block;
-    // vertical-align: top;
-    // margin: 0 35px;
+  &--lang {
 
-    &--social {
+    @media screen and @tablet-width {
+      order: -1;
+      display: flex;
+      align-self: flex-end;
+      margin-right: 120px;
+    }
+
+    @media screen and @desktop-width {
+      /* transform: translateY(-110px);
+      margin-bottom: 0; */
       position: absolute;
-      top: 0;
-      left: 0;
+      top: 20px;
+      left: 50%;
+      margin-left: 330px;
     }
+  }
 
-    &--lang {
-      @media screen and @desktop-width {
-        margin-top: 30px;
-      }
-    }
+}
+
+.main-nav__item-container {
+  @media screen and @desktop-width {
+    width: 1000px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 0 auto;
   }
 }
+
+.main-nav__item--menu-link {}
 
 .main-nav__logo-box {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  padding-bottom: 45px;
-
-  img {
-    margin-left: 0;
-    margin-right: auto;
-  }
+  margin-bottom: 45px;
+  padding-bottom: 2px;
 
   @media screen and @tablet-width {
-    padding-bottom: 95px;
+    margin-bottom: 90px;
   }
 
   @media screen and @desktop-width {
-    padding-bottom: 95px;
+    align-self: center;
+    width: 100%;
+    margin-bottom: 0;
+    padding-bottom: 0;
   }
 
 }
 
 .main-nav__logo-menu {
-  // margin: 0 auto;
-  // transform: translateX(-50%);
+  display: block;
+  margin-left: 0;
+  margin-right: auto;
 
   @media screen and @desktop-width {
     width: 191px;
     height: 77px;
-    margin-top: 65px;
   }
 }
 
 .main-nav__logo-menu-link {
+  display: block;
 
   @media screen and @tablet-width {
     margin-left: auto;
     margin-right: auto;
   }
+
 }
 
 .main-nav__burger-icon {
@@ -365,8 +422,10 @@
 }
 
 .main-nav__slider {
-  // padding: 0 20px;
-  margin-bottom: 135px;
+
+  @media screen and @desktop-width {
+    margin-bottom: 30px;
+  }
 }
 
 /* .main-nav__slides {
@@ -377,11 +436,12 @@
 
 .main-nav__slide {
   width: 296px;
+  overflow: hidden;
 }
 
 .main-nav__slide-link {
+  position: relative;
   display: block;
-  overflow: hidden;
 
   img {
     display: block;
@@ -389,9 +449,44 @@
     height: auto;
     transition: all 0.5s ease;
 
-     &:hover {
+    &:hover {
       transform: scale(1.1);
-      filter: saturate(150%);
+      // filter: saturate(150%);
     }
   }
+
+  span {
+    display: none;
+    position: absolute;
+    z-index: 3;
+    top: 120px;
+    left: 0;
+    height: 40px;
+    padding-left: 25px;
+    padding-right: 25px;
+    font-size: 17px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: @white;
+    overflow: hidden;
+  }
+
+  &:hover {
+    span {display: block;}
+  }
+
+  &:hover::after {
+    position: absolute;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    pointer-events: none;
+  }
+
 }
