--- a/less/blocks/partners.less
+++ b/less/blocks/partners.less
@@ -4,10 +4,14 @@
   padding-bottom: 65px;
   border-top: 2px solid @title-color;
 
+  @media screen and @tablet-width {
+    padding-bottom: 105px;
+  }
+
   @media screen and @desktop-width {
     border-top: none;
     .container-desktop();
-    padding-bottom: 100px;
+    padding-bottom: 180px;
   }
 }
 
@@ -24,14 +28,14 @@
 
   @media screen and @tablet-width {
     margin-top: -55px;
-    margin-bottom: 50px;
+    margin-bottom: 95px;
     padding-left: 80px;
     font-size: 22px;
   }
 
   @media screen and @desktop-width {
     font-size: 37px;
-    margin-bottom: 100px;
+    margin-bottom: 160px;
   }
 
   &::after {
@@ -69,7 +73,8 @@
   @media screen and @tablet-width {
     flex-direction: row;
     justify-content: center;
-    margin: 0 80px;
+    align-items: center;
+    margin: 0 140px;
   }
 }
 
@@ -115,11 +120,13 @@
   @media screen and @tablet-width {
     width: 117px;
     height: 31px;
+    margin-top: 5px;
   }
 
   @media screen and @desktop-width {
     width: 171px;
     height: 51px;
+    margin-top: 10px;
   }
 }
 
