Новый вариант внутренней

--- a/less/blocks/main.less
+++ b/less/blocks/main.less
@@ -4,4 +4,12 @@
 
 .main--keepers {
   padding-bottom: 65px;
+
+  @media screen and @tablet-width {
+    padding-bottom: 80px;
+  }
+
+  @media screen and @desktop-width {
+    padding-bottom: 60px;
+  }
 }
