--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -30,6 +30,14 @@
   border-top: 2px solid @title-color;
 
   .container-desktop();
+
+  @media screen and @tablet-width {
+    padding-top: 70px;
+  }
+
+  @media screen and @desktop-width {
+    padding-top: 100px;
+  }
 }
 
 .map__content {
