--- a/less/blocks/guards-content.less
+++ b/less/blocks/guards-content.less
@@ -108,7 +108,7 @@
     &--third {
       // clear: both;
       position: relative;
-      width: 415px;
+      width: 460px;
       margin-left: 0;
       padding-top: 0;
       padding-left: 0!important;
@@ -197,8 +197,13 @@
 .guards-content__readmore {
   margin-left: 40px;
 
-  @media screen and @desktop-width {
+  @media screen and @tablet-width {
     position: absolute;
+    bottom: 110px;
+    left: 120%;
+  }
+
+  @media screen and @desktop-width {
     bottom: 132px;
     left: 110%;
   }
