--- a/less/blocks/guards-gallery.less
+++ b/less/blocks/guards-gallery.less
@@ -1,9 +1,17 @@
 .guards-gallery {
+  position: relative;
   margin-top: 25px;
   // outline:  1px solid black;
 
+  @media screen and @tablet-width {
+    padding-top: 40px;
+  }
+
   @media screen and @desktop-width {
     width: 100%;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
     .container-desktop();
   }
 }
@@ -47,11 +55,17 @@
   }
 }
 
-.guards-gallery__link-container {
+.guards-gallery__link-container2 {
+  padding-left: 20px;
+  padding-right: 20px;
   margin-left: 40px;
 
-  @media screen and @desktop-width {
+  @media screen and @tablet-width {
     text-align: right;
-    margin-right: 340px;
+    margin-right: 100px;
+  }
+
+  @media screen and @desktop-width {
+    margin-right: 170px;
   }
 }
