--- a/less/style.less
+++ b/less/style.less
@@ -26,6 +26,8 @@
 @import "blocks/guards-content.less";
 @import "blocks/guards-content-2.less";
 @import "blocks/guards-gallery.less";
+@import "blocks/about-us.less";
+@import "blocks/news.less";
 @import "blocks/map.less";
 
 @import "blocks/animation.less";
