--- a/less/blocks/guards-content-2.less
+++ b/less/blocks/guards-content-2.less
@@ -16,6 +16,16 @@
   position: relative;
   margin-bottom: 45px;
 
+  @media screen and (max-width: 480px) {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  @media screen and (min-width: 480px) {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+
   @media screen and @tablet-width {
     float: right;
     width: 53%;
@@ -124,6 +134,16 @@
   overflow: hidden;
   margin-top: 40px;
   margin-bottom: 40px;
+
+  @media screen and (max-width: 480px) {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  @media screen and (min-width: 480px) {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
 
   @media screen and @desktop-width {
     margin-top: 50px;
