--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -23,7 +23,7 @@
     margin-bottom: 70px;
     padding: 0 5.5%;
     font-size: 20px;
-    text-transform: uppercase;
+    // text-transform: uppercase;
   }
 
   @media screen and @desktop-width {
