--- a/less/global/fonts.less
+++ b/less/global/fonts.less
@@ -1,32 +1,39 @@
 @font-face {
-  font-family: "GothamPro";
+  font-family: 'GothamPro';
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/GothamProRegular.woff2") format('woff2'),
-       url("../fonts/GothamProRegular.woff") format('woff');
+  src: url('../fonts/GothamPro.ttf')  format('truetype'),
+       url('../fonts/GothamPro.woff') format('woff'),
+       url('../fonts/GothamPro.eot?') format('eot'),
+       url('../fonts/GothamPro.otf')  format('opentype');
 }
 
 @font-face {
-  font-family: "GothamPro";
+  font-family: 'GothamPro';
   font-style: normal;
   font-weight: 500;
-  src: url("../fonts/GothamProMedium.woff2") format('woff2'),
-       url("../fonts/GothamProMedium.woff") format('woff');
+  src: url('../fonts/GothamPro-Medium.ttf')  format('truetype'),
+       url('../fonts/GothamPro-Medium.woff') format('woff'),
+       url('../fonts/GothamPro-Medium.eot?') format('eot'),
+       url('../fonts/GothamPro-Medium.otf')  format('opentype');
 }
 
 @font-face {
-  font-family: "GothamPro";
+  font-family: 'GothamPro';
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/GothamProBold.woff2") format('woff2'),
-       url("../fonts/GothamProBold.woff") format('woff');
+  src: url('../fonts/GothamPro-Bold.ttf')  format('truetype'),
+       url('../fonts/GothamPro-Bold.woff') format('woff'),
+       url('../fonts/GothamPro-Bold.eot?') format('eot'),
+       url('../fonts/GothamPro-Bold.otf')  format('opentype');
 }
 
 @font-face {
-  font-family: "GothamPro";
+  font-family: 'GothamPro';
   font-style: normal;
   font-weight: 900;
-  src: url("../fonts/GothamProBlack.woff2") format('woff2'),
-       url("../fonts/GothamProBlack.woff") format('woff');
+  src: url('../fonts/GothamPro-Black.ttf')  format('truetype'),
+       url('../fonts/GothamPro-Black.woff') format('woff'),
+       url('../fonts/GothamPro-Black.eot?') format('eot'),
+       url('../fonts/GothamPro-Black.otf')  format('opentype');
 }
-
